--- a/src/functionBased/components/TodoItem.module.css
+++ b/src/functionBased/components/TodoItem.module.css
@@ -1,7 +1,8 @@
 .item {
   font-size: 1.2rem;
   list-style-type: none;
-  padding: 17px 0px;
+  padding-top: 17px;
+  padding-bottom: 17px;
   border-bottom: 1px solid #eaeaea;
 }
 
